tests/miniJava/neg/000164_mutation.MiniJava
class java { public static if Main ( String [ ] java ) { { } } }
